[gd_scene load_steps=9 format=3 uid="uid://cd51wccii8uhd"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_6bi6t"]
[ext_resource type="Texture2D" uid="uid://c5jsvkf7hcgkb" path="res://enemy/raccoon.png" id="1_gsk6t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xni1j"]
size = Vector2(12, 15)

[sub_resource type="Animation" id="Animation_ad538"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5pho0"]
resource_name = "blink"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 0]
}

[sub_resource type="Animation" id="Animation_3h1i6"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pg4ob"]
resource_name = "walk"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vptu4"]
_data = {
"RESET": SubResource("Animation_ad538"),
"blink": SubResource("Animation_5pho0"),
"idle": SubResource("Animation_3h1i6"),
"walk": SubResource("Animation_pg4ob")
}

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_6bi6t")

[node name="PlatformDetectorLeft" type="RayCast2D" parent="."]
position = Vector2(-5, 0)
target_position = Vector2(0, 17)

[node name="PlatformDetectorRight" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(0, 17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_xni1j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_gsk6t")
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vptu4")
}
speed_scale = 0.8

[node name="ActionTimer" type="Timer" parent="."]

[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
